--- a/Frontend/src/components/MainPage.css
+++ b/Frontend/src/components/MainPage.css
@@ -1,8 +1,20 @@
+html {
+  scroll-behavior: smooth;
+  height: 100%;
+}
+
 body {
   background-color: #080710;
   color: #ffffff;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+  margin: 0;
+}
+
+.main-content {
+  flex-grow: 1;
 }
 
 .text-center {
@@ -11,8 +23,19 @@ body {
   justify-content: center;
   align-items: center;
   height: 40vh;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.features-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+
+  padding: 5px;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
@@ -26,28 +49,21 @@ body {
   backdrop-filter: blur(10px);
   width: 80%;
   margin: auto;
-}
-
-.display-4 {
-  font-size: 3rem;
-  font-weight: 700;
-  margin-bottom: 20px;
-  animation: fadeIn 2s ease-in-out;
-}
-
-.lead {
-  font-size: 1.5rem;
-  font-weight: 300;
-  margin-bottom: 40px;
-  animation: fadeIn 2s ease-in-out 1s;
+  margin-top: 8%;
+  transition: width 0.3s ease;
 }
 
 .features {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 1.8%;
   width: 100%;
+  padding-bottom: 2.5%;
+}
+
+.features-position {
+  margin-top: 36.6%;
 }
 
 .feature {
@@ -59,6 +75,8 @@ body {
   box-shadow: 0 0 20px rgba(8, 7, 16, 0.6);
   backdrop-filter: blur(5px);
   text-align: left;
+  transition: width 0.3s ease;
+  height: 70%;
 }
 
 .feature h2 {
@@ -89,6 +107,7 @@ body {
 
   .feature {
     width: 45%;
+    margin-bottom: 20px;
   }
 }
 
@@ -102,7 +121,8 @@ body {
   }
 
   .feature {
-    width: 45%;
+    width: 100%;
+    margin-bottom: 20px;
   }
 }
 
@@ -112,11 +132,12 @@ body {
   }
 
   .lead {
-    font-size: 1rem;  
+    font-size: 1rem;
   }
 
   .feature {
     width: 100%;
+    padding: 10px;
   }
 }
 
