--- a/Frontend/src/style/Navbar.scss
+++ b/Frontend/src/style/Navbar.scss
@@ -9,7 +9,7 @@ body {
   background-size:auto;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../image.png);
+  background-image: url(../../public/bgImage.png);
 }
 
 .navbar {
