--- a/Frontend/src/style/App.css
+++ b/Frontend/src/style/App.css
@@ -40,3 +40,17 @@
 .read-the-docs {
   color: #888;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
+}
