--- a/Frontend/src/style/Navbar.scss
+++ b/Frontend/src/style/Navbar.scss
@@ -9,6 +9,7 @@ body {
   background-size:auto;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-image: url(../../public/bgImage.png);
 }
 
