--- a/Frontend/src/style/register.css
+++ b/Frontend/src/style/register.css
@@ -1,4 +1,3 @@
-/* Reset és dobozmodell */
 *,
 *:before,
 *:after {
@@ -11,7 +10,6 @@ body {
   background-color: #080710;
 }
 
-/* REGISZTRÁCIÓS KONTAINER */
 .register-container {
   max-width: 600px;
   width: 90%;
@@ -29,7 +27,6 @@ body {
   color: white;
 }
 
-/* CÍM */
 .register-container h3 {
   font-size: 32px;
   font-weight: 500;
@@ -38,7 +35,6 @@ body {
   margin-bottom: 20px;
 }
 
-/* LABEL */
 .register-container label {
   font-size: 16px;
   font-weight: 500;
@@ -46,7 +42,6 @@ body {
   margin-top: 10px;
 }
 
-/* INPUTOK ÉS SELECTEK */
 .register-container input:not([type="checkbox"]),
 .register-container select {
   height: 50px;
@@ -64,12 +59,10 @@ body {
   margin-top: 6px;
 }
 
-/* PLACEHOLDER */
 .register-container ::placeholder {
   color: #e5e5e5;
 }
 
-/* CHECKBOX */
 .register-container input[type="checkbox"] {
   width: 18px;
   height: 18px;
@@ -79,7 +72,6 @@ body {
   vertical-align: middle;
 }
 
-/* GOMB */
 .register-container button,
 .register-container .buttonski {
   margin-top: 30px;
@@ -99,7 +91,6 @@ body {
   background-color: #e0e0e0;
 }
 
-/* SZAKTERÜLETEK STÍLUSA */
 .spec-checkboxes {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
@@ -120,7 +111,10 @@ body {
   backdrop-filter: blur(4px);
 }
 
-/* RESPONSIVE MEDIA QUERY – TABLET */
+option{
+  color: black;
+}
+
 @media (max-width: 768px) {
   .register-container {
     padding: 30px 20px;
@@ -142,7 +136,6 @@ body {
   }
 }
 
-/* RESPONSIVE MEDIA QUERY – MOBIL */
 @media (max-width: 480px) {
   .register-container {
     padding: 20px 10px;
