--- a/Frontend/src/style/App.css
+++ b/Frontend/src/style/App.css
@@ -1,3 +1,10 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+/*Középre igazítás*/
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,19 +12,40 @@
   text-align: center;
 }
 
+/*Footer lap aljára tolása*/
+
+/*Egész konténer*/
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+/**/
+.content {
+  flex: 1;
+}
+
+/*Kártya*/
+.card {
+  padding: 2em;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+/* Logó animáció*/
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -33,24 +61,6 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
 .read-the-docs {
   color: #888;
-}
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
-.page-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.content {
-  flex: 1;
 }
