--- a/Frontend/src/style/LexSearch.css
+++ b/Frontend/src/style/LexSearch.css
@@ -5,14 +5,14 @@
 .filters {
   margin-bottom: 20px;
 }
-
+/*Ügyvvéd kártya*/
 .lawyer-card {
   border: 1px solid #ccc;
   padding: 12px;
   border-radius: 6px;
   background: #f9f9f9;
 }
-
+/* Ügyvéd tartalom*/
 .lexsearch-content {
 margin-top: 40px;
 padding: 30px;
@@ -21,7 +21,7 @@ box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
 backdrop-filter: blur(10px);
 border-radius: 16px;
 }
-
+/* Ügyvéd Szűrő*/
 .filter-row {
 display: flex;
 flex-wrap: wrap;
@@ -63,7 +63,7 @@ box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
   gap: 30px;
   margin-bottom: 30px;
 }
-
+/*Keresettek csoportjának kártyái*/
 .search-card {
   border-radius: 16px;
   background: rgba(255, 255, 255, 0.1);
@@ -84,7 +84,7 @@ box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
   color: black;
 }
 
-
+/* Keresés gomb */
 .search-btn {
 padding: 10px 20px;
 background-color: rgba(255, 255, 255, 0.15);
@@ -95,11 +95,11 @@ font-weight: 600;
 cursor: pointer;
 transition: background 0.3s ease;
 }
-
+/* Keresés gomb hover állapotban */
 .search-btn:hover {
 background-color: rgba(255, 255, 255, 0.5);
 } 
-
+/*Keresés visszajelzés*/
 .search-feedback {
   margin-top: 32px;
   padding: 14px 24px;
@@ -114,7 +114,7 @@ background-color: rgba(255, 255, 255, 0.5);
   width: 100%;
   color: #d1d5db;
 }
-
+/*Keresés visszajelzése hibánál*/
 .search-feedback.error {
   color: #f87171;
   border-left: 6px solid #f87171;
@@ -126,8 +126,7 @@ background-color: rgba(255, 255, 255, 0.5);
   border-left: 6px solid #9ca3af;
 }
 
-
-
+/*Ügyvéd kártya*/
 .lawyer-card {
 background: rgba(255, 255, 255, 0.08);
 padding: 20px;
@@ -138,6 +137,7 @@ color: white;
 margin-top: 20px;
 }
 
+/* Ügyvéd kártya gomb*/
 .lawyer-card button {
 margin-top: 10px;
 padding: 8px 16px;
@@ -149,6 +149,7 @@ font-weight: 500;
 cursor: pointer;
 }
 
+/* Ügyvéd kártya gomb hover állapotban*/
 .lawyer-card button:hover {
 background-color: rgba(255, 255, 255, 0.5);
 }
